--- a/LearningSterling/html-template/index.template.html
+++ b/LearningSterling/html-template/index.template.html
@@ -2,7 +2,7 @@
 <html lang="en-us"/>
     <head>
       
-        <title>${title}</title>
+        <title>Individual Project</title>
         <meta name="google" value="notranslate" />         
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       	<link rel="stylesheet" href="main.css"/>
@@ -59,7 +59,7 @@
               <p>
                   For the indivudal project I decided to build a turret defense style video game. The game is very simple. The user is a space ship traveling along in space shooting down Evil math equations that are trying to ram it. When an equation comes onto the screen, you the user only have to type in the proper answer and watch as a missile flies towards it and blows it up. Its actually a lot of fun. I had tons of fun developing this game. 
               </p>
-              <h2>THE TECHNOLOGTY</h2>
+              <h2>THE TECHNOLOGY</h2>
               <p>
                 The objective for this assignment was to creata a simple video game using three different apis. The Apis I chose for this game were all sort of bundled into the same api. Starling is a cool extension to Flash that allows the application to be rendered through your GPU instead of your CPU. This greatly buffs performance. For the other two apis I used Starling's Feathers which is an extension of extensions. The package included a ton of neat features including the particle effects system I used 
               </p>
